--- a/src/components/DragonsList/dragonslist.module.scss
+++ b/src/components/DragonsList/dragonslist.module.scss
@@ -1,9 +1,20 @@
+.fetchButton{
+  margin-top: 50px;
+  padding: 3px 7px;
+  border: none;
+  border-radius: 20px;
+  font-size: 13px;
+  background-color: dodgerblue;
+  color: white;
+  cursor: pointer;
+  &:hover{
+    background-color: #1c79d5;
+  }
+}
 .dragonList{
   display: flex;
   flex-wrap: wrap;
   gap: 20px;
-  margin-top: 70px;
+  margin-top: 30px;
   margin-bottom: 50px;
-
-
 }
